# dots-simulation-orchestrator

./: .dockerignore  .env  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  README.md  docker-compose.local.yml  example_post.json  main.py  main_old.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test2_post.json  test_post.json
.github/workflows/: publish-image.yaml  python-app.yaml
ci/: build_and_push_image_ci_tno_nl.sh  build_and_push_image_kind.sh  prepare_dev_env.sh
docs/: calculation-services.md  conf.py  dots_go-e_component_diagram.plantuml  dots_go-e_component_diagram.puml  dots_go-e_sequence_diagram.plantuml  index.md  introduction.md
docs/info/: citations.md
docs/usage/: calculation services.md  co-simulations.md  developers.md  examples.md  installation.md  introduction.md  running simulations.md
k8s/: cluster-config.yaml  deploy_dots.sh  deploy_dots_azure.sh  deploy_dots_kind.sh  env-secret-config.yaml  env-secret-config_template.yaml  grafana-deployment.yaml  influxdb-deployment.yaml  ingress.yaml  ingress_template.yaml  setup_kind_cluster.sh  so-rest-deployment.yaml
k8s/old/: ci-tno-dots.yaml  env-secret.yaml  mosquitto-config.yaml
message_definitions/: healthcheck.proto  lifecycle.proto
messages/: __init__.py  healthcheck_pb2.py  lifecycle_pb2.py
simulation_orchestrator/: actions.py  influxdb_connector.py  main.py  parse_esdl.py  requests.py  types.py
test/: K8sApiMock.py  TestActions.py  TestDataHandler.py  TestParse.py  TestSimulationExecutor.py  TestSimulationInventory.py  k8s_api_mock.py  test_actions.py  test_data_handler.py  test_oauth_utilities.py  test_simulation_executor.py  test_simulation_inventory.py
trials/: minimal_es_GOe.esdl  mock1_2_post_body.json  test_file.esdl  test_parse_esdl.py  test_read_esdl.py
(+48 files in other folders)
