[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulation_orchestrator"
version = "0.1.0"
authors = [
  { name="Leo van Schooten", email="l.g.t.v.schooten@tue.nl" },
]
description = "Simulation orchestrator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "overrides==6.1.0",
  "python-dotenv==1.0.1",
  "typing-utils==0.1.0",
  "uvicorn==0.30.1",
  "fastapi==0.115.11",
  "python-multipart==0.0.9",
  "pydantic==2.10.6",
  "pydantic-settings==2.8.1",
  "Jinja2==3.1.6",
  "pyESDL==22.11.2",
  "influxdb~=5.3.1",
  "kubernetes==19.*",
  "passlib==1.7.4",
  "bcrypt==4.1.1",
  "python-jose==3.4.0",
  "helics==3.6.1",
  "dots-infrastructure==1.0.2",
  "pandas==2.2.3",
  "pre-commit"
]

[project.optional-dependencies]
doc = [
    "sphinx_rtd_theme",
    "myst-parser"
]

[project.urls]
Homepage = "https://github.com/EES-TUe/dots-simulation-orchestrator"
Issues = "https://github.com/EES-TUe/dots-simulation-orchestrator/issues"